Remove not implemented endpoints from API docs
(cherry picked from commit 0a05781aca1651abb18ac5474fc56d45b9df136a)
