# src/Whisparr.Api.V3/Health/HealthController.cs
@@ -22,6 +22,12 @@ namespace Whisparr.Api.V3.Health
             _healthCheckService = healthCheckService;
         }
 
+        [NonAction]
+        public override ActionResult<HealthResource> GetResourceByIdWithErrorHandler(int id)
+        {
+            return base.GetResourceByIdWithErrorHandler(id);
+        }
+
         protected override HealthResource GetResourceById(int id)
         {
             throw new NotImplementedException();
